# FastAPI-Template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
env/dev/: .env.example  Dockerfile  compose.yml  entrypoint.sh
env/prod/: .env.example  compose.yml  entrypoint.sh
src/: main.py  messages.py  settings.py
src/apps/: __init__.py
src/apps/auth/: endpoints.py  schemas.py  services.py  utils.py
src/apps/hc/: endpoints.py  schemas.py
src/apps/hc/tasks/: __init__.py  task.py
src/apps/roles/: endpoints.py  enums.py  messages.py  models.py
src/apps/roles/admin/: __init__.py  seeds.py
src/apps/roles/schemas/: __init__.py  permissions.py  validators.py
src/apps/roles/services/: __init__.py  utils.py
src/apps/todos/: endpoints.py  models.py  schemas.py  services.py
src/apps/users/: endpoints.py  enums.py  messages.py  models.py  services.py  utils.py
src/apps/users/admin/: __init__.py  seeds.py
src/apps/users/endpoints/: __init__.py  users.py
src/apps/users/schemas/: __init__.py  validators.py
src/apps/users/services/: users.py
src/libs/: __init__.py  filters.py  middleware.py  utils.py
src/libs/admin/: __init__.py  authentication.py  config.py
src/libs/admin/templates/: ckeditor.html  custom_create.html  custom_edit.html
src/libs/admin/views/: model_view.py
src/libs/authentication/: decorators.py  messages.py
src/libs/authentication/middleware/: __init__.py  errors.py  hash.py  utils.py
src/libs/celery/: __init__.py  config.py  utils.py
src/libs/cookiecutter/create_app/: cookiecutter.json
src/libs/cookiecutter/create_app/hooks/: post_gen_project.py  pre_gen_project.py
src/libs/cors/middleware/: __init__.py
src/libs/database/: __init__.py  base_model.py  session.py
src/libs/database/alembic/: custom_types.py  env.py  relation.py  script.py.mako
src/libs/database/middleware/: __init__.py
src/libs/database/migrations/: 7bf703d12f66_create_todos_and_users_table.py  9cc7beab9ed7_created_todo_table.py  __init__.py  a21c3d9790a5_create_users_table.py
src/libs/database/pagination/: __init__.py  utils.py
src/libs/database/seeds/: __init__.py
src/libs/email/: __init__.py
src/libs/email/templates/: email_template.html  password_reset.html  verification.html
src/libs/fetch/: __init__.py  default.py  mock.py
src/libs/image/: __init__.py  errors.py
src/libs/locale/: context.py  enums.py  messages.py  translate.py  utils.py
src/libs/locale/middleware/: __init__.py
src/libs/log/: __init__.py  colors.py  config.py  filters.py  levels.py
src/libs/log/middleware/: __init__.py
src/libs/pagination/: __init__.py  schema.py
src/libs/profiling/: __init__.py
src/libs/profiling/middleware/: __init__.py
src/libs/redis/: __init__.py  decorators.py
src/libs/schemas/: __init__.py  base_model.py  messages.py  utils.py
src/libs/utilities/: filters.py  iterator.py  misc.py  parallel.py
src/libs/utilities/path/: __init__.py  to_seed_files.py
tests/: base_test.py  test_hc.py  test_todo.py  test_user.py
tests/libs/: __init__.py  test_authentication_hash.py  test_authentication_jwt.py  test_database_session.py  test_fetch.py  test_filters.py  test_locale.py  test_log.py  test_middleware.py  test_pagination.py  test_redis.py  test_schemas.py  test_utils.py
(+7 files in other folders)
