[project]
name = "backend-boilerplate"
version = "0.1.0"
description = "This repository groups all files needed by a generic FastAPI application."
authors = [
    { name = "Vinicius Grigio", email = "vinicius_grigio@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0)",
    "python-decouple (>=3.8,<4.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]

# [project.urls]
# repository = ""
# documentation = ""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.vulture]
ignore_names = ["DBBaseModel", "Query", "sessionmaker", "TYPE_CHECKING"]
min_confidence = 80

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    'def __repr__',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
]

[tool.coverage.xml]
output = "tests/coverage.xml"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[tool.poetry.group.test.dependencies]
httpx = "^0.28.1"
coverage = "^7.9.2"
